--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'org.apache.kafka:kafka_2.13:3.2.0'
     implementation('org.apache.avro:avro:1.12.0')
     implementation 'io.projectreactor:reactor-core:3.4.18'
+    implementation('ch.qos.logback:logback-classic:1.5.18')
 //    implementation 'io.projectreactor:reactor-test:3.4.18'
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
