--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,11 @@ javafx {
 dependencies {
 // https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
     implementation 'org.apache.kafka:kafka-clients:3.9.0'
-    implementation 'org.apache.kafka:kafka-streams:3.9.0'
+//    implementation 'org.apache.kafka:kafka-streams:3.9.0'
 // https://mvnrepository.com/artifact/org.apache.kafka/kafka
-    implementation 'org.apache.kafka:kafka_2.13:3.2.0'
+//    implementation 'org.apache.kafka:kafka_2.13:3.2.0'
     implementation('org.apache.avro:avro:1.12.0')
-    implementation 'io.projectreactor:reactor-core:3.4.18'
+//    implementation 'io.projectreactor:reactor-core:3.4.18'
     implementation('ch.qos.logback:logback-classic:1.5.18')
 //    implementation 'io.projectreactor:reactor-test:3.4.18'
     compileOnly 'org.projectlombok:lombok:1.18.36'
@@ -62,7 +62,7 @@ dependencies {
     implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-    implementation('no.tornado:tornadofx-controls:1.0.4')
+//    implementation('no.tornado:tornadofx-controls:1.0.4')
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
 
 }
