--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-//    maven {
-//        url "https://packages.confluent.io/maven"
-//    }
+    maven {
+        url "https://packages.confluent.io/maven"
+    }
 }
 
 ext {
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.0'
-//    implementation 'io.confluent:kafka-avro-serializer:7.9.0'
+    implementation 'io.confluent:kafka-avro-serializer:7.9.0'
 // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation 'com.google.guava:guava:31.1-jre'
 // https://mvnrepository.com/artifact/org.openjfx/javafx-controls
