--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 //    implementation 'org.apache.kafka:kafka-streams:3.9.0'
 // https://mvnrepository.com/artifact/org.apache.kafka/kafka
 //    implementation 'org.apache.kafka:kafka_2.13:3.2.0'
-    implementation('org.apache.avro:avro:1.12.0')
+//    implementation('org.apache.avro:avro:1.12.0')
 //    implementation 'io.projectreactor:reactor-core:3.4.18'
     implementation('ch.qos.logback:logback-classic:1.5.18')
 //    implementation 'io.projectreactor:reactor-test:3.4.18'
