--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ java {
 
 application {
 //    mainModule = 'com.example.mytool'
-    mainClass = 'com.example.mytool.MyApplication'
+    mainClass = 'com.example.mytool.Application'
 }
 
 //compileJava {
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.16.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.0'
     implementation 'io.confluent:kafka-avro-serializer:7.9.0'
+    implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.11.5'
 // https://mvnrepository.com/artifact/com.google.guava/guava
 //    implementation 'com.google.guava:guava:31.1-jre'
 // https://mvnrepository.com/artifact/org.openjfx/javafx-controls
@@ -113,7 +114,7 @@ publishing {
 //task fatJar(type: Jar) {
 jar {
     manifest {
-        attributes 'Main-Class': 'com.example.mytool.MyApplication'
+        attributes 'Main-Class': 'com.example.mytool.Application'
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     from {
