--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,17 @@
                 <configuration>
                     <mainClass>com.example.mytool.Application</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>debug</id>
+                        <configuration>
+                            <mainClass>com.example.mytool.Application</mainClass>
+                            <options>
+                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
+                            </options>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
