--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
             <id>confluent</id>
             <url>https://packages.confluent.io/maven</url>
         </repository>
+        <repository>
+            <id>repackage-repo</id>
+            <url>file://${project.basedir}/repackage-repo</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -81,9 +85,41 @@
         <!-- Kafka -->
         <dependency>
             <groupId>io.confluent</groupId>
-            <artifactId>kafka-avro-serializer</artifactId>
+            <artifactId>kafka-schema-registry-client</artifactId>
             <version>7.9.0</version>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>io.confluent</groupId>-->
+        <!--            <artifactId>kafka-avro-serializer</artifactId>-->
+        <!--            <version>7.9.0</version>-->
+        <!--        </dependency>-->
+        <dependency>
+            <groupId>dev.mccue</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.4.0</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>io.confluent</groupId>-->
+        <!--            <artifactId>kafka-avro-serializer</artifactId>-->
+        <!--            <version>7.9.0</version>-->
+        <!--        </dependency>-->
+
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-schema-serializer-combined</artifactId>
+            <version>7.9.0</version>
+            <!--            <repository>-->
+            <!--                <id>my-repo1</id>-->
+            <!--            </repository>-->
+            <!--            <scope>system</scope>-->
+            <!--            <systemPath>${project.basedir}/repackage-repo/io/confluent/kafka-avro-schema-serializer-combined/7.9.0/kafka-avro-schema-serializer-combined-7.9.0.jar</systemPath>-->
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>io.confluent</groupId>-->
+        <!--            <artifactId>kafka-serde-tools-package</artifactId>-->
+        <!--            <version>7.9.0</version>-->
+        <!--            <type>pom</type>-->
+        <!--        </dependency>-->
 
         <!-- UI Components -->
         <dependency>
@@ -162,7 +198,84 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.moditect</groupId>-->
+            <!--                <artifactId>moditect-maven-plugin</artifactId>-->
+            <!--                <version>1.0.0.Final</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>add-module-infos</id>-->
+            <!--                        <phase>generate-resources</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>add-module-info</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <outputDirectory>-->
+            <!--                                ${project.build.directory}/dependency-->
+            <!--                            </outputDirectory>-->
+            <!--                            <modules>-->
+            <!--                                <module>-->
+            <!--                                    <artifact>-->
+            <!--                                        <groupId>org.fxmisc.richtext</groupId>-->
+            <!--                                        <artifactId>richtextfx</artifactId>-->
+            <!--                                        <version>0.11.5</version>-->
+            <!--                                    </artifact>-->
+            <!--                                    <moduleInfoSource>-->
+            <!--                                        module org.fxmisc.richtext {-->
+            <!--                                            exports org.fxmisc.richtext;-->
+            <!--                                            exports org.fxmisc.richtext.event;-->
+            <!--                                            exports org.fxmisc.richtext.model;-->
+            <!--                                            exports org.fxmisc.richtext.util;-->
 
+            <!--                                        }-->
+
+
+            <!--                                    </moduleInfoSource>-->
+            <!--                                </module>-->
+            <!--                            </modules>-->
+            <!--                            <overwriteExistingFiles>true</overwriteExistingFiles>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+
+            <!--                </executions>-->
+            <!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-dependency-plugin</artifactId>-->
+            <!--                <version>3.6.0</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>copy</id>-->
+            <!--                        <phase>package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>copy-dependencies</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
+
+            <!--            <plugin>-->
+            <!--                <groupId>io.github.fvarrui</groupId>-->
+            <!--                <artifactId>javapackager</artifactId>-->
+            <!--                <version>1.7.6</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <phase>package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>package</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            &lt;!&ndash; mandatory &ndash;&gt;-->
+            <!--                            <mainClass>io.github.nhtuan10.mykafkatool.Main</mainClass>-->
+            <!--                            &lt;!&ndash; optional &ndash;&gt;-->
+            <!--                            <bundleJre>true</bundleJre>-->
+            <!--                            <generateInstaller>true</generateInstaller>-->
+            <!--                            <administratorRequired>false</administratorRequired>-->
+            <!--                            <platform>auto</platform>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
