--- a/pom.xml
+++ b/pom.xml
@@ -148,13 +148,13 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>io.github.nhtuan10.mykafkatool.Application</mainClass>
+                    <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
                         <id>debug</id>
                         <configuration>
-                            <mainClass>io.github.nhtuan10.mykafkatool.Application</mainClass>
+                            <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolApplication</mainClass>
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005</option>
                             </options>
@@ -177,7 +177,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>io.github.nhtuan10.mykafkatool.Main</mainClass>
+                                    <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolLauncher</mainClass>
                                 </transformer>
                             </transformers>
                             <!--                            <relocations>-->
