add "number of partitions" text to topic tooltips; refactor code

--- a/pom.xml
+++ b/pom.xml
@@ -258,18 +258,18 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolApplication</mainClass>
+                    <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolLauncher</mainClass>
                 </configuration>
             </plugin>
             <!--            Gluon not working-->
-            <!--            <plugin>-->
-            <!--                <groupId>com.gluonhq</groupId>-->
-            <!--                <artifactId>gluonfx-maven-plugin</artifactId>-->
-            <!--                <version>1.0.26</version>-->
-            <!--                <configuration>-->
-            <!--                    <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolApplication</mainClass>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
+            <!--                        <plugin>-->
+            <!--                            <groupId>com.gluonhq</groupId>-->
+            <!--                            <artifactId>gluonfx-maven-plugin</artifactId>-->
+            <!--                            <version>1.0.26</version>-->
+            <!--                            <configuration>-->
+            <!--                                <mainClass>io.github.nhtuan10.mykafkatool.MyKafkaToolApplication</mainClass>-->
+            <!--                            </configuration>-->
+            <!--                        </plugin>-->
         </plugins>
     </build>
 </project>
