--- a/my-kafka-tool-main/pom.xml
+++ b/my-kafka-tool-main/pom.xml
@@ -22,6 +22,7 @@
         <junit.version>5.8.1</junit.version>
         <lombok.version>1.18.38</lombok.version>
         <native.maven.plugin.version>0.10.6</native.maven.plugin.version>
+        <my-kafka-tool.version>0.1.1-SNAPSHOT</my-kafka-tool.version>
     </properties>
 
     <repositories>
@@ -35,7 +36,8 @@
         <dependency>
             <groupId>io.github.nhtuan10</groupId>
             <artifactId>my-kafka-tool-misc</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${my-kafka-tool.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.github.nhtuan10</groupId>
@@ -144,6 +146,21 @@
             <artifactId>dagger</artifactId>
             <version>2.56.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>4.0.23</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-templates</artifactId>
+            <version>3.0.25</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jknack</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>${handlebars-version}</version>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>com.gluonhq</groupId>-->
         <!--            <artifactId>ignite-dagger</artifactId>-->
@@ -174,7 +191,7 @@
                         <path>
                             <groupId>io.github.nhtuan10</groupId>
                             <artifactId>my-kafka-tool-misc</artifactId>
-                            <version>0.1.0-SNAPSHOT</version>
+                            <version>${my-kafka-tool.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
