--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
         <module>my-kafka-tool-launcher</module>
     </modules>
     <properties>
-        <javafx.version>21.0.2</javafx.version>
-        <handlebars-version>4.4.0</handlebars-version>
+        <javafx.version>21</javafx.version>
+        <handlebars.version>4.4.0</handlebars.version>
+        <modular.version>0.0.1</modular.version>
     </properties>
 
 
