--- a/my-kafka-tool-launcher/pom.xml
+++ b/my-kafka-tool-launcher/pom.xml
@@ -27,6 +27,13 @@
             <groupId>io.github.nhtuan10</groupId>
             <artifactId>modular-impl</artifactId>
             <version>${modular.version}</version>
+            <!--            <exclusions>-->
+            <!--                <exclusion>-->
+            <!--                    <groupId>org.jboss.shrinkwrap.resolver</groupId>-->
+            <!--                    <artifactId>shrinkwrap-resolver-depchain</artifactId>-->
+            <!--                </exclusion>-->
+
+            <!--            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>io.github.nhtuan10</groupId>
@@ -70,6 +77,11 @@
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
             <version>1.15.11</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.9.1</version>
         </dependency>
     </dependencies>
     <build>
