--- a/my-kafka-tool-launcher/pom.xml
+++ b/my-kafka-tool-launcher/pom.xml
@@ -17,10 +17,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <repositories>
-        <repository>
-            <id>repackage-repo</id>
-            <url>file://${project.basedir}/repackage-repo</url>
-        </repository>
+        <!--        <repository>-->
+        <!--            <id>repackage-repo</id>-->
+        <!--            <url>file://${project.basedir}/repackage-repo</url>-->
+        <!--        </repository>-->
     </repositories>
     <dependencies>
         <dependency>
@@ -102,7 +102,6 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib</classpathPrefix>
                             <mainClass>io.github.nhtuan10.mykafkatool.ModularLauncher</mainClass>
                         </manifest>
                     </archive>
