--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <javafx.version>21</javafx.version>
         <handlebars.version>4.4.0</handlebars.version>
         <modular.version>0.0.1</modular.version>
+        <my-kafka-tool.version>0.1.1-SNAPSHOT</my-kafka-tool.version>
     </properties>
 
 
