launcher code changes

--- a/my-kafka-tool-launcher/src/main/bin/config.properties
+++ b/my-kafka-tool-launcher/src/main/bin/config.properties
@@ -2,4 +2,4 @@
 #Mon Jun 23 19:05:36 EDT 2025
 version=0.1.1-SNAPSHOT
 #java.uri=file://lib/my-kafka-tool-main-0.1.1-SNAPSHOT.jar
-java.uri=mvn://io.github.nhtuan10/my-kafka-tool-main/0.1.1-SNAPSHOT
+jar.uri=mvn\://io.github.nhtuan10/my-kafka-tool-main/0.1.1-SNAPSHOT
