--- a/my-kafka-tool-launcher/pom.xml
+++ b/my-kafka-tool-launcher/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>zip4j</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.16.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
