--- a/my-kafka-tool-launcher/src/main/bin/config.properties
+++ b/my-kafka-tool-launcher/src/main/bin/config.properties
@@ -1,5 +1,8 @@
 #Global MyKafkaTool Properties
-#Mon Jun 23 19:05:36 EDT 2025
-version=0.1.1-SNAPSHOT
-#java.uri=file://lib/my-kafka-tool-main-0.1.1-SNAPSHOT.jar
-main.artifact.uri=mvn\://io.github.nhtuan10/my-kafka-tool-main/0.1.1-SNAPSHOT
+#Tue Jun 24 18:24:39 EDT 2025
+main.artifact.download-url=http\://localhost\:8080
+main.artifact.fileName-prefix=my-kafka-tool-main-${version}
+main.artifact.maven-metadata-url=http\://localhost\:8080/maven-metadata-local.xml
+main.artifact.snapshot-maven-metadata-url=http\://localhost\:8080/${version}/maven-metadata-local.xml
+main.artifact.location=lib/my-kafka-tool-main-${version}.jar
+main.artifact.version=0.1.1-SNAPSHOT
