--- a/my-kafka-tool-launcher/src/main/bin/config.properties
+++ b/my-kafka-tool-launcher/src/main/bin/config.properties
@@ -4,5 +4,5 @@ main.artifact.download-url=http\://localhost\:8080
 main.artifact.fileName-prefix=my-kafka-tool-main-${version}
 main.artifact.maven-metadata-url=http\://localhost\:8080/maven-metadata-local.xml
 main.artifact.snapshot-maven-metadata-url=http\://localhost\:8080/${version}/maven-metadata-local.xml
-main.artifact.location=lib/my-kafka-tool-main-${version}.jar
+main.artifact.directory=lib
 main.artifact.version=0.1.1-SNAPSHOT
