--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,22 @@
         <lombok.version>1.18.38</lombok.version>
     </properties>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <!--    <profiles>-->
     <!--        <profile>-->
     <!--            <id>default-tools.jar</id>-->
