launcher code change to load main artifact from maven; refactor code;

--- a/my-kafka-tool-launcher/src/main/bin/config.properties
+++ b/my-kafka-tool-launcher/src/main/bin/config.properties
@@ -1,5 +1,6 @@
 #Global MyKafkaTool Properties
 #Tue Jun 24 18:24:39 EDT 2025
+#main.artifact.uri=mvn://io/github.nhtuan10/my-kafka-tool-main/${version}
 main.artifact.download-url=http\://localhost\:8080/io/github/nhtuan10/my-kafka-tool-main
 main.artifact.fileName-prefix=my-kafka-tool-main-${version}
 main.artifact.maven-metadata-fileName=maven-metadata-local.xml
