add modular-impl dependency to pom.xml

--- a/my-kafka-tool-main/pom.xml
+++ b/my-kafka-tool-main/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.nhtuan10</groupId>
-            <artifactId>modular-api</artifactId>
+            <artifactId>modular-impl</artifactId>
             <version>${modular.version}</version>
         </dependency>
         <!-- JavaFX -->
