add module-info.java for all subprojects; make it compatible with jpackage

--- a/my-kafka-tool-launcher/src/main/resources/config.properties
+++ b/my-kafka-tool-launcher/src/main/resources/config.properties
@@ -5,5 +5,6 @@ artifact.download-url=http\://localhost\:8080/io/github/nhtuan10/my-kafka-tool-$
 artifact.fileName-prefix=my-kafka-tool-${artifact-name}-${version}
 artifact.maven-metadata-fileName=maven-metadata-local.xml
 artifact.snapshot-maven-metadata-fileName=${version}/maven-metadata-local.xml
-artifact.directory=lib
+artifact.directory=.
 artifact.version=0.1.1.5-SNAPSHOT
+isDeployed=true
